[B] Fix vertical list headers overflowing in IE 11
Resolves #1335

--- a/client/src/theme/Components/backend/_vertical-list.scss
+++ b/client/src/theme/Components/backend/_vertical-list.scss
@@ -222,6 +222,7 @@
       display: flex;
       flex-flow: column;
       flex-grow: 1;
+      width: 100%;
       padding-right: 20px;
       vertical-align: top;
     }
